--- a/PropertyRead/PropertyRead.csproj
+++ b/PropertyRead/PropertyRead.csproj
@@ -42,6 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\DailyImportSummuryEmailDto.cs" />
+    <Compile Include="Model\NewPriceListDto.cs" />
+    <Compile Include="Model\NewPriceListEmailDto.cs" />
+    <Compile Include="Model\NewPriceListProductDto.cs" />
+    <Compile Include="NameReaderExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
